Fix remaining failing tests
* Add default values in conf files

Signed-off-by: Yannic Klem <Yannic.Klem@bosch.io>